tests/fail/BitwiseAnd.java
package fail;

import java.lang.System;

public class BitwiseAnd{
    public static void main(String[] args){
        System.out.println('a' & 42);
    }
}